Fix mobile text overflow issue
The text would be positioned on top of one another.

--- a/frontend/styles/home.css
+++ b/frontend/styles/home.css
@@ -11,7 +11,7 @@
     display: flex;
     flex-direction: column;
     margin-top: 0;
-    height: calc(100vh - 90px);
+    height: calc(100vh - 30px);
     min-height: 640px;
 
     & header {
